--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="container">
-		<img id="track_img" src="" alt="song-img">
+		<div id="track_img_container"><div id="time_container"><span id="progress_time">0:0</span><span id=total_time>0:0</span></div><div id="progress_bg"><div id="progress"></div></div></div>	
 		<span id="track_title">title</span>
 	</div>
 
