addded name of artist

--- a/website/index.html
+++ b/website/index.html
@@ -5,11 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
 </head>
 <body>
 	<div id="container">
-		<div id="track_img_container"><div id="time_container"><span id="progress_time">0:0</span><span id=total_time>0:0</span></div><div id="progress_bg"><div id="progress"></div></div></div>	
-		<span id="track_title">title</span>
+		<div id="track_container">
+			<div id="track_img_container"></div>	
+			<div id="lower_part_of_thingeliding">
+				<div id="info">
+					<span id="track_title">title</span>
+					<span id="track_artist">person</span>
+				</div>
+				<div id="progress_bg"><div id="progress"></div></div><div id="time_container"><span id="progress_time">0:0</span><span id=total_time>0:0</span></div>
+			</div>
+
+		</div>
 	</div>
 
 	<script src="auothScript.js"></script>
