yes i did not dio not stuff

--- a/website/index.html
+++ b/website/index.html
@@ -19,8 +19,13 @@
 				</div>
 				<div id="progress_bg"><div id="progress"></div></div><div id="time_container"><span id="progress_time">0:0</span><span id=total_time>0:0</span></div>
 			</div>
-
 		</div>
+		<div id="right_side">
+			<div id="wheater">
+
+			</div>
+		</div>
+	</div>
 	</div>
 
 	<script src="auothScript.js"></script>
