--- a/website/index.html
+++ b/website/index.html
@@ -21,8 +21,10 @@
 			</div>
 		</div>
 		<div id="right_side">
-			<div id="wheater">
-
+			<div id="weather_container">
+				<img src="" alt="" id="weatherIcon">
+				<span id="tempature">0C</span>
+				<span id="weather">The sun is sun</span>
 			</div>
 		</div>
 	</div>
