--- a/website/index.html
+++ b/website/index.html
@@ -21,10 +21,16 @@
 			</div>
 		</div>
 		<div id="right_side">
+			<div id="calender">
+				<span id="time">12:00</span>
+				<div id="clock">
+					<span id="date">Jan 14</span>
+					<span id="month">Tursday</span>
+				</div>
+			</div>
 			<div id="weather_container">
 				<img src="" alt="" id="weatherIcon">
 				<span id="tempature">0C</span>
-				<span id="weather">The sun is sun</span>
 			</div>
 		</div>
 	</div>
@@ -32,5 +38,6 @@
 
 	<script src="auothScript.js"></script>
 	<script src="script.js"></script>	
+	<script src="timeScript.js"></script>
 </body>
 </html>
