--- a/website/index.html
+++ b/website/index.html
@@ -21,16 +21,16 @@
 			</div>
 		</div>
 		<div id="right_side">
-			<div id="calender">
-				<span id="time">12:00</span>
-				<div id="clock">
-					<span id="date">Jan 14</span>
-					<span id="month">Tursday</span>
-				</div>
+			<span id="time">12:00</span>
+			<div id="clock">
+				<span id="date">Jan 14</span>
+				<span id="month">Tursday</span>
 			</div>
-			<div id="weather_container">
-				<img src="" alt="" id="weatherIcon">
-				<span id="tempature">0C</span>
+			<div id="calender-weather">
+				<div id="weather_container">
+					<img src="" alt="" id="weatherIcon">
+					<span id="tempature">0C</span>
+				</div>
 			</div>
 		</div>
 	</div>
